# aoc

./: .gitignore  Cargo.toml  README.md  lib.rs
benches/: day1.rs  main.rs
src/: day1.rs  day2.rs  main.rs
src/day1/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
src/day14/: mod.rs
src/day15/: mod.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs
src/day8/: mod.rs
src/day9/: mod.rs
