[package]
name = "aoc"
version = "0.1.0"
authors = ["Vsevolod Strukchinsky <floatdrop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/aoc.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
itertools = "0.9.0"
recap = "0.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "day1"
harness = false
