[package]
name = "aoc"
version = "0.1.0"
authors = ["Vsevolod Strukchinsky <floatdrop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
itertools = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_scan = "0.4.1"
scan_fmt = "0.2"
regex = "1"
lazy_static = "1"
peg = "0.6.3"
bitvec = "0.19"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
harness = false
